--- a/Autorizador.ULF.FE.Client/Components/HeaderSidebar.razor
+++ b/Autorizador.ULF.FE.Client/Components/HeaderSidebar.razor
@@ -4,6 +4,8 @@
 <MudThemeProvider @rendermode="InteractiveServer" @bind-IsDarkMode="@_isDarkMode" Theme="_theme" />
 
 <MudAppBar Style="@($"color:{UnimedLFTheme.Palette.White}; background:{Colors.Teal.Darken4};")">
+    <MudLink Href="dashboard"><MudImage Src="images/logo512.png" Height="60"></MudImage></MudLink>
+
     <MudIconButton Class="ms-2" Icon="@MenuIcon" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
     <MudText Typo="Typo.h5">
         <MudIcon Icon="@Icons.Material.Filled.Adjust" Size="Size.Large" />
